update UserMapper and CreateUserRequest